--- a/index.html
+++ b/index.html
@@ -22,36 +22,16 @@
     <button id="reset" class="btn">Reset</button>
   </div>
 
-  <ul class="laps">
+  <ul class="laps hidden">
     <li class="lap">
       <h3 class="lap-heading">Laps</h3>
+      <p><span id="lapMinutes">00</span>:<span id="lapSeconds">00</span>:<span id="lapMilli">00</span></p>
     </li>
 
     <li class="lap">
       <p class="lap-name">Lap 1</p>
       <p class="lap-time">00:40:02</p>
     </li>
-
-    <li class="lap">
-      <p class="lap-name">Lap 2</p>
-      <p class="lap-time">01:20:42</p>
-    </li>
-
-    <li class="lap">
-      <p class="lap-name">Lap 3</p>
-      <p class="lap-time">02:34:00</p>
-    </li>
-
-    <li class="lap">
-      <p class="lap-name">Lap 4</p>
-      <p class="lap-time">03:48:29</p>
-    </li>
-
-    <li class="lap">
-      <p class="lap-name">Lap 5</p>
-      <p class="lap-time">05:01:59</p>
-    </li>
-
   </ul>
 
   <script src="index.js"></script>
